--- a/dot.config/waybar/style.css
+++ b/dot.config/waybar/style.css
@@ -2,36 +2,21 @@
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 14px;
+    margin: 1px 0px 1px 0px;
+    padding: 0px 2px 0px 2px;
+    border-radius:  2px 2px 2px 2px;
 }
 
 window#waybar {
     background-color: rgba(10, 10, 20, 100);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    color: #FFFFFF;
     transition-property: background-color;
     transition-duration: .5s;
 }
 
 window#waybar.hidden {
     opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
 }
 
 #workspaces button {
@@ -41,7 +26,7 @@ window#waybar.chromium {
     /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -3px transparent;
     /* Avoid rounded borders under each workspace name */
-    border: none;
+    border: 0;
     border-radius: 0;
 }
 
@@ -52,7 +37,7 @@ window#waybar.chromium {
 }
 
 #workspaces button.focused {
-    background-color: #64727D;
+    background-color: #84827D;
     box-shadow: inset 0 -3px #ffffff;
 }
 
@@ -60,27 +45,10 @@ window#waybar.chromium {
     background-color: #eb4d4b;
 }
 
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#mpd {
-    padding: 0 10px;
-    color: #ffffff;
+#mode * {
+    background-color: #FFFF00;
+    border: 3px solid #FF0000;
+    color: black;
 }
 
 #window,
@@ -98,25 +66,21 @@ window#waybar.chromium {
     margin-right: 0;
 }
 
+/*----------------------------------------------------------------------------*/
 #clock {
     background-color: #64727D;
+    color: #FFFFFF;
 }
 
+/*----------------------------------------------------------------------------*/
 #battery {
     background-color: #ffffff;
     color: #000000;
 }
 
-#battery.charging, #battery.plugged {
+#battery.charging, #battery.plugged, #battery.full{
     color: #ffffff;
     background-color: #26A65B;
-}
-
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
 }
 
 #battery.critical:not(.charging) {
@@ -129,33 +93,94 @@ window#waybar.chromium {
     animation-direction: alternate;
 }
 
-label:focus {
-    background-color: #000000;
+/*----------------------------------------------------------------------------*/
+#keyboard-state {
+    /* background: #97e1ad; */
+    /* color: #000000; */
+    padding: 0 0px;
+    margin: 0 5px;
+    min-width: 16px;
 }
 
-#cpu {
-    background-color: #2ecc71;
-    color: #000000;
+#keyboard-state > label {
+    padding: 0 5px;
 }
 
-#memory {
-    background-color: #9b59b6;
+#keyboard-state > label.locked {
+    background: rgba(0, 0, 0, 0.2);
 }
 
-#disk {
-    background-color: #964B00;
-}
+/*----------------------------------------------------------------------------*/
+/* #backlight { */
+/*     background-color: #908b41; */
+/*     color: #000000; */
+/* } */
 
-#backlight {
-    background-color: #90b1b1;
-}
 
+/*----------------------------------------------------------------------------*/
+/* #temperature { */
+/*     background-color: #f0932b; */
+/*     color: #000000; */
+/* } */
+
+#temperature.critical {
+    background-color: #eb4d4b;
+    color: #FFCE00;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+/*----------------------------------------------------------------------------*/
+/* #memory { */
+/*     background-color: #9b59b6; */
+/*     color: #00EE00; */
+/* } */
+
+/*----------------------------------------------------------------------------*/
+/* #cpu { */
+/*     background-color: #AAccFF; */
+/*     color: #000000; */
+/* } */
+
+
+/*----------------------------------------------------------------------------*/
 #network {
     background-color: #2980b9;
+    color: #FFFFFF;
 }
 
 #network.disconnected {
     background-color: #f53c3c;
+}
+
+
+/*----------------------------------------------------------------------------*/
+#idle_inhibitor {
+    color: #FFFFFF;
+    background-color: #2d3436;
+}
+
+#idle_inhibitor.activated {
+    background-color: #ecf0f1;
+    color: #2d3436;
+}
+
+/*----------------------------------------------------------------------------*/
+
+@keyframes blink {
+    to {
+        background-color: #ffffff;
+        color: #000000;
+    }
+}
+
+label:focus {
+    background-color: #000000;
+}
+#disk {
+    background-color: #964B00;
 }
 
 #pulseaudio {
@@ -174,21 +199,6 @@ label:focus {
     min-width: 100px;
 }
 
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f0932b;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
-}
 
 #tray {
     background-color: #2980b9;
@@ -203,31 +213,7 @@ label:focus {
     background-color: #eb4d4b;
 }
 
-#idle_inhibitor {
-    background-color: #2d3436;
-}
 
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
-}
-
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
 
 #language {
     background: #00b093;
@@ -237,18 +223,3 @@ label:focus {
     min-width: 16px;
 }
 
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
